[package]
name = "archlogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
debug = false
rpath = false
strip = true

[dependencies]
fltk = "1.3.33"
image = "0.24.5"
uname = "0.1.1"
