[package]
name = "archlogo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
debug = false
rpath = false
strip = true

[dependencies]
anyhow = "1.0"
eframe = "0.21"
image = "0.24"
uname = "0.1"
